# ntk

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  SECURITY.md  ntk.c  ntk.h
.github/workflows/: cmake.yml  codeql-analysis.yml
test/: CMakeLists.txt  ntk_tests.c
